# mastodon-admin-hook

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
