[project]
name = "mastodon-admin-hook"
version = "0.1.0"
description = ""
authors = [{ name = "'Jeong Arm'", email = "'kjwonmail@gmail.com'" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.81.0",
    "httpx>=0.23.0",
    "snowflake-id>=0.0.2",
    "uvicorn>=0.18.3",
]

[dependency-groups]
dev = [
    "flake8>=7.1.2",
    "flake8-import-order>=0.18.2",
]

[tool.hatch.build.targets.sdist]
include = ["mastodon_admin_hook"]

[tool.hatch.build.targets.wheel]
include = ["mastodon_admin_hook"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
